Minor padding adjustment. Fixed media query overlap. Added aria-labels

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,6 @@ body {
     padding-right: 0;
     margin-top: 0;
     margin-left: 4.5rem;
-    margin-right: 0;
     overflow-x: hidden;
   }
 }
@@ -117,6 +116,12 @@ body {
   .container-fluid.full-width .card {
     margin-left: 15px;
     margin-right: 15px;
+  }
+}
+@media screen and (min-width: 1300px) {
+  .container-fluid.full-width .card {
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
